--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap');
+
+
+/* Define @font-face rules for Orbitron and Noto Sans Math */
+@font-face {
+    font-family: 'Orbitron';
+    src: url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap') format('woff');
+    unicode-range: U+0020-007E; /* ASCII characters */
+}
+
+@font-face {
+    font-family: 'Noto Sans Math';
+    src: url('https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap') format('woff');
+    unicode-range: U+221A, U+005E; /* Square root and ^ characters */
+}
+
 
 * {
     box-sizing: border-box;
@@ -31,7 +47,6 @@ body {
 
 .display {
     margin: 10px 10px 10px 10px;
-    padding: 5px;
     width: calc(100% - 20px);
     height: 100px;
     border-radius: 5px;
@@ -45,10 +60,10 @@ body {
 
 .display p {
     font-size: 70px;
-    font-family: 'Orbitron';
+    font-family: 'Orbitron', 'Noto Sans Math', sans-serif;
     color: #E0E0E0;
 
-
+    padding-right: 10px;
     text-align: end;
 }
 
@@ -67,7 +82,7 @@ body {
 
 .row {
     width: 100%;
-    height: calc(20% - 5px);
+    height: calc(16.6% - 5px);
     margin: 5px 0 0 0;
 
     display: flex;
@@ -75,11 +90,11 @@ body {
 }
 
 .key {
-    width: calc(25%);
+    width: 25%;
 }
 
 .double-key {
-    width: calc(50%);
+    width: calc(25% * 2);
     background-color: #008CBA;
 }
 .double-key:hover {
@@ -96,7 +111,8 @@ body {
     color: #000000 ;
     font-weight: 600;
     font-size: 30px;
-    font-family: 'Orbitron';
+    font-family: 'orbitron','Noto Sans Math', sans-serif;
+
 }
 
 .numeric {
@@ -108,7 +124,17 @@ body {
 
 .non-numeric {
     background-color: #FFA500;
+    
 }
 .non-numeric:hover {
     background-color: #FF9500   ;
+}
+
+.delete {
+    color:#FFFFFF ;
+    background-color:#FF6347;
+    
+}
+.delete:hover {
+    background-color: #E74C3C ;
 }
