--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap');
 
+
 * {
     box-sizing: border-box;
 }
@@ -11,19 +12,54 @@ html, body {
     margin: 0;
 }
 
+html, body, .calculator, .key {
+    transition: 1s;
+}
+
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    background-color: #e0e0e0;
 }
+
+/* THEME SWITCHER CSS */
+.theme-switches {
+    display: flex;
+    justify-content: center;
+}
+.switch {
+  border: 2px solid black;
+  border-radius: 50px;
+  height: 30px;
+  width: 30px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.switch:hover {
+  transform: scale(1.2);
+  transition: 0.3s ease-in-out;
+}
+
+#switch-1 {
+  background-color: #fff;
+}
+
+#switch-2 {
+  background-color: #000;
+}
+
+#switch-3 {
+  background-color: #ff00ea;
+}
+
+
 /* CALCULATOR - DISPLAY CSS */
 
 .calculator {
     width: 400px;
-    height: 625px;
-    background-color: #FFFFFF ;
+    height: 655px;
     border-radius: 5px;
     padding: 5px;
     padding-top: 25px;
@@ -31,8 +67,27 @@ body {
     flex-flow: column;
 }
 
+.display-box {
+    height: 30px;
+    width: auto;
+    border-radius: 3px 3px 0px 0px;
+    margin: 0 25px 0px 10px;
+
+    align-self: flex-end;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: center;
+}
+.display-box p {
+    padding: 0 5px;
+    margin: 0;
+    font-size: 20px;
+    font-family: 'Orbitron', 'Noto Sans Math', sans-serif;
+}
+
 .display {
-    margin: 10px 10px 10px 10px;
+    margin: 0 10px 10px 10px;
     width: calc(100% - 20px);
     height: 100px;
     border-radius: 5px;
@@ -47,9 +102,8 @@ body {
 }
 
 .display p {
-    font-size: 70px;
+    font-size: 65px;
     font-family: 'Orbitron', 'Noto Sans Math', sans-serif;
-    color: #E0E0E0;
 
     padding-right: 10px;
     display: inline-block;
@@ -57,6 +111,7 @@ body {
     overflow-y: hidden;
     white-space: nowrap; /* Prevent wrapping to new lines */
 }
+
 
 /* Firefox Scrollbar Options */
 @-moz-document url-prefix() {
@@ -105,73 +160,4 @@ body {
 
 .key {
     width: 25%;
-}
-
-/* Styling for different types of keys */
-.key, .double-key {
-    border-radius: 10px;
-    border: 0px;
-    transition: 0.2s;
-
-    color: #000000 ;
-    font-weight: 600;
-    font-size: 30px;
-    font-family: 'orbitron', 'Noto Sans Math';
-}
-.key:active, .double-key:active {
-    transform: scale(1.03)
-}
-
-.bracket {
-    font-family: 'Noto Sans Math';
-}
-
-.double-key {
-    width: calc(25% * 2);
-    background-color: #008CBA;
-}
-.double-key:hover {
-    background-color: #0077B6;
-}
-.double-key:active {
-    background-color: #0056B3;
-}
-
-
-.numeric {
-    background-color: #E0E0E0;
-}
-.numeric:hover {
-    background-color: #CCCCCC;
-}
-.numeric:active {
-    background-color: #BFBFBF;
-}
-
-.non-numeric {
-    background-color: #FFA500;
-}
-.non-numeric:hover {
-    background-color: #FF9500   ;
-}
-.non-numeric:active{
-    background-color: #FF7F00;
-}
-
-.delete {
-    color:#FFFFFF ;
-    background-color:#FF6347;
-
-}
-.delete:hover {
-    background-color:#E74C3C ;
-}
-.delete:active {
-    background-color: #D95238;
-}
-
-/* Size increase for certain keys */
-.font {
-    font-size: 35px;
-    font-weight: 600;
 }
